examples/manifests/not-organized/yaml/service/http-go-lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: http-go-lb
  name: http-go-lb
  namespace: np-test
spec:
  type: LoadBalancer
  ports:
  - name: 80-8080
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: http-go
