examples/manifests/not-organized/yaml/service/http-go-np.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: http-go-svc
  name: http-go-svc
spec:
  type: NodePort
  ports:
  - name: 80-8080
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-go
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-go-deploy
  labels:
    app: http-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-go
  template:
    metadata:
      labels:
        app: http-go
    spec:
      containers:
        - name: http-go
          image: iamjjanga/http-go:v1
          ports:
            - containerPort: 8080
