examples/manifests/not-organized/yaml/service/tomcat-ns-np-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tomcat-test
spec: {}
status: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tomcat
  name: tomcat
  namespace: tomcat-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tomcat
    spec:
      containers:
      - image: tomcat
        name: tomcat
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tomcat-svc
  name: tomcat-svc
  namespace: tomcat-test
spec:
  type: NodePort
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30002
  selector:
    app: tomcat
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tomcat-lb
  name: tomcat-lb
  namespace: tomcat-test
spec:
  type: LoadBalancer
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat
status:
  loadBalancer: {}
